--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android{
 }
 
 dependencies{
+    def lifecycle_version = "2.6.2"
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -46,7 +47,7 @@ dependencies{
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Architectural Components
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
 
     // Room
     implementation "androidx.room:room-runtime:2.5.2"
@@ -60,8 +61,8 @@ dependencies{
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 
     // Coroutine Lifecycle Scopes
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.2"
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -78,10 +79,22 @@ dependencies{
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
+    // Injects viewmodel directly into the activity
+    implementation "androidx.activity:activity-ktx:1.7.2"
 
+    // Injects viewmodel directly into the activity
+    def fragment_version = "1.6.1"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+}
+kapt {
+    correctErrorTypes true
 }
